RP-895 Add support for further MRCM Reference Sets and report in New and Changed MRCM Report